--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: twinned
-description: A new Flutter project.
-version: 0.0.5
+description: Boodskap Digital Twin
+version: 1.0.0
 publish_to: 'none'
 
 
@@ -12,14 +12,19 @@ dependencies:
     sdk: flutter
   
   open_street_map_search_and_pick: ^0.1.1
+  package_info_plus: ^7.0.0
 
   nocode_commons:
     git:
       url: https://github.com/boodskap/nocode_commons.git
+#    path:
+#      nocode_commons
 
   twinned_widgets:
     git:
       url: https://github.com/boodskap/twinned_widgets.git
+#    path:
+#      twinned_widgets
 
 dev_dependencies:
   flutter_test:
