--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ dependencies:
   package_info_plus: ^7.0.0
 
   nocode_commons:
-    git:
-      url: https://github.com/boodskap/nocode_commons.git
-#    path:
-#      nocode_commons
+#    git:
+#      url: https://github.com/boodskap/nocode_commons.git
+    path:
+      nocode_commons
 
   twinned_widgets:
     git:
