--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: twinned
 description: Boodskap Digital Twin
-version: 1.0.0
+version: 1.8.1
 publish_to: 'none'
 
 
@@ -15,10 +15,10 @@ dependencies:
   package_info_plus: ^7.0.0
 
   nocode_commons:
-    git:
-      url: https://github.com/boodskap/nocode_commons.git
-#    path:
-#      nocode_commons
+#    git:
+#      url: https://github.com/boodskap/nocode_commons.git
+    path:
+      nocode_commons
 
 dev_dependencies:
   flutter_test:
