--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: twinned
 description: Boodskap Digital Twin
-version: 2.0.5
+version: 2.0.7
 publish_to: 'none'
 
 
@@ -21,9 +21,11 @@ dependencies:
 #    path:
 #      twinned_widgets
   nocode_commons:
-    git:
-      url: https://github.com/boodskap/nocode_commons.git
-      ref: main
+#    git:
+#      url: https://github.com/boodskap/nocode_commons.git
+#      ref: main
+    path:
+      nocode_commons
 
 dev_dependencies:
   flutter_test:
